# fpl-gaffer

./: .env.example  .gitignore  LICENSE  README.md  langgraph.json  main.py  pyproject.toml
notebooks/: agents.ipynb  data_analyzer_agent.ipynb  data_collection.ipynb  data_collector_agent.ipynb  tool_calling.ipynb  tools.ipynb
src/fpl_gaffer/: settings.py
src/fpl_gaffer/agents/data_collector/: graph.py  nodes.py
src/fpl_gaffer/core/: exceptions.py  prompts.py  state.py
src/fpl_gaffer/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
src/fpl_gaffer/integrations/api/: main.py
src/fpl_gaffer/integrations/api/app/db/: __init__.py  models.py
src/fpl_gaffer/integrations/api/app/db/migrations/: 001_init.sql  002_fpl_user_tables.sql  003_user_leagues_table.sql
src/fpl_gaffer/integrations/api/app/middleware/: auth.py
src/fpl_gaffer/integrations/api/app/routes/: user.py
src/fpl_gaffer/integrations/api/app/services/: database.py  fpl.py  supabase.py
src/fpl_gaffer/integrations/api/app/utils/: logger.py  schemas.py
src/fpl_gaffer/integrations/whatsapp/: endpoint.py  schema.py  webhook.py
src/fpl_gaffer/modules/: __init__.py
src/fpl_gaffer/modules/fpl/: __init__.py  fpl_api.py  fpl_data.py
src/fpl_gaffer/modules/news/: news_search.py
src/fpl_gaffer/modules/user/: __init__.py  team_data.py  user_data.py
src/fpl_gaffer/services/fpl/: fpl_api.py
src/fpl_gaffer/services/news/: news_processor.py  news_search.py
src/fpl_gaffer/services/user/: user_data.py
src/fpl_gaffer/tools/: __init__.py  executor.py  fpl.py  fpl_api.py  loader.py  news.py  news_search.py  user.py
src/fpl_gaffer/tools/data_analyzer/: news_processor.py
src/fpl_gaffer/tools/data_collector/: fpl_api.py  fpl_data.py  news_search.py  user_data.py
src/fpl_gaffer/utils/: __init__.py  chains.py  fpl_mapper.py  helpers.py
