[project]
name = "fpl-gaffer"
version = "0.1.0"
description = "The Gaffer for your FPL team."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "lxml-html-clean>=0.4.2",
    "newspaper3k>=0.2.8",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.10",
]
