[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-gaffer"
version = "0.1.0"
description = "The Gaffer for your FPL team."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.118.0",
    "httpx>=0.28.1",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "lxml-html-clean>=0.4.2",
    "newspaper3k>=0.2.8",
    "pydantic>=2.11.7",
    "pyngrok>=7.4.0",
    "python-dotenv>=1.1.1",
    "selenium>=4.34.2",
    "tavily-python>=0.7.10",
    "twilio>=9.8.4",
    "undetected-chromedriver>=3.5.5",
    "unstructured>=0.18.11",
]

[tool.setuptools.packages.find]
where = ["src"]
